<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KalkulatorActivity">
    <include layout="@layout/back_toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="40dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kalkulator"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kalkulator_deskripsi"

            />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:baselineAligned="false"
                >

                <LinearLayout
                    android:id="@+id/btn_emas"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="20dp"
                        android:background="@drawable/shape1"
                        android:src="@drawable/gold"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/emas"
                        android:textSize="10sp"
                        android:gravity="center_horizontal|center"
                        />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_hasil_pertanian"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="20dp"
                        android:background="@drawable/shape1"
                        android:src="@drawable/pertanian"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/hasil_pertanian"
                        android:textSize="10sp"
                        android:gravity="center_horizontal|center"
                        />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_barang_dagangan"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="20dp"
                        android:background="@drawable/shape1"
                        android:src="@drawable/dagang"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/barang_dagangan"
                        android:textSize="10sp"
                        android:gravity="center_horizontal|center"
                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:baselineAligned="false"
                >

                <LinearLayout
                    android:id="@+id/btn_binatang_ternak"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="20dp"
                        android:background="@drawable/shape1"
                        android:src="@drawable/ternak"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/binatang_ternak"
                        android:textSize="10sp"
                        android:gravity="center_horizontal|center"
                        />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_hasil_tambang"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="20dp"
                        android:background="@drawable/shape1"
                        android:src="@drawable/tambang"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/hasil_tambang"
                        android:textSize="10sp"
                        android:gravity="center_horizontal|center"
                        />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_rikazz"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="20dp"
                        android:background="@drawable/shape1"
                        android:src="@drawable/rikaaz"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/rikaaz"
                        android:textSize="10sp"
                        android:gravity="center_horizontal|center"
                        />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:baselineAligned="false"
                >

                <LinearLayout
                    android:id="@+id/btn_hasil_profesi"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="20dp"
                        android:background="@drawable/shape1"
                        android:src="@drawable/profil_fix"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/hasil_profesi"
                        android:textSize="10sp"
                        android:gravity="center_horizontal|center"
                        />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_tabungan"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="20dp"
                        android:background="@drawable/shape1"
                        android:src="@drawable/tabungan"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Tabungan"
                        android:textSize="10sp"
                        android:gravity="center_horizontal|center"
                        />

                </LinearLayout>
                <LinearLayout
                    android:visibility="invisible"
                    android:id="@+id/btn_galang_dana"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="20dp"
                        android:background="@drawable/shape1"
                        android:src="@drawable/ic_securedletter"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Sample"
                        android:textSize="10sp"
                        android:gravity="center_horizontal|center"
                        />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</LinearLayout>